--- a/Views/Account/EditUserProfile.cshtml
+++ b/Views/Account/EditUserProfile.cshtml
@@ -60,7 +60,7 @@
         </div>
 
         <div class="form-group">
-            @Html.Label("File Upload", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Upload Profile Picture", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.Editor("avatar", new { htmlAttributes = new { type= "file", id="avatar"} })
                 @Html.ValidationMessageFor(model => model.AvatarPath, "", new { @class = "text-danger" })
