--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -285,11 +285,7 @@
     <!-- Page level custom scripts -->
     <script src="~/Scripts/datatables-demo.js"></script>
 
-
-    <script src="~/Scripts/chart-area-demo.js"></script>
-    <script src="~/Scripts/chart-pie-demo.js"></script>
-    <script src="~/Scripts/chart-bar-demo.js"></script>
-
+    @RenderSection("scripts", required: false)
 
 </body>
 
