--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -50,9 +50,10 @@
                             @Html.DisplayFor(modelItem => item.Created)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+ 
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-success"}) |
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning"}) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger"})
                         </td>
                     </tr>
                 }
